debug=True setting

--- a/main_app/templates/pages/blog-detail.html
+++ b/main_app/templates/pages/blog-detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}{{news.topic}} |Home Responsive Limited | homeresponsivelimited.com Nigeria{% endblock %}
 {% block description %}{{news.content}}{% endblock %}
-{% block keywords -House Cleaning, Dish Washing, Laundry, Cooking, Chef, Gardener, Nanny, Maid, After-Party cleanup, New House cleaning, Car Washing, House, Car, Vehincle, Help, Baby, House Maid,Nigeria, Africa, Jobs,Money,Employement,Lagos{% endblock %}
+{% block keywords %}House Cleaning, Dish Washing, Laundry, Cooking, Chef, Gardener, Nanny, Maid, After-Party cleanup, New House cleaning, Car Washing, House, Car, Vehincle, Help, Baby, House Maid,Nigeria, Africa, Jobs,Money,Employement,Lagos{% endblock %}
 {% block main %}
 <style>
   img {
@@ -27,5 +27,6 @@
   </div>
 </section>   
 <!-- Detail blog end -->
+<section style="height: 70vh;"></section>
 {% endblock %}
 
